--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %} HOME {% endblock %} 
 {% block content%}
 <h1 align = "center" style ="font-weight: 600 ; color :rgb(13, 176, 245) "  >
- "Bus Ticket Digitisation & Tracking System "
+ " Bus Tracking System for Institutions "
 </h1>
 <div align = "center">
 <img src="{{ url_for('static', filename='images/bus.jpg') }}" class="img-fluid" alt="Responsive image" >
@@ -12,7 +12,7 @@
 </div>
 
 <div >
-<a class="btn btn-primary btn-lg btn-block" href="/login" role="button"  >USER</a><br>
+<a class="btn btn-primary btn-lg btn-block" href="/student-login" role="button"  >STUDENT</a><br>
 <a class="btn btn-secondary btn-lg btn-block" href="/conductor-login" role="button">CONDUCTOR</a><br>
 <a class="btn btn-warning btn-lg btn-block" href="/admin-login" role="button">ADMIN</a><br>
 
