--- a/website/templates/student_login.html
+++ b/website/templates/student_login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %}User Login{% endblock %} 
+{% block title %}STUDENT Login{% endblock %} 
 {% block content%}
 
 <form method="POST">
