Initial setup done

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -33,11 +33,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbar">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" id="home" href="/user-home">Home</a>
-      <a class="nav-item nav-link" id="home" href="/user-enquire-route">Route Enquire</a>
-      <a class="nav-item nav-link" id="home" href="/user-travel-history">Travel History</a>
-      <a class="nav-item nav-link" id="home" href="/user-wallet">Wallet</a>
-      <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+      <a class="nav-item nav-link" id="student-home" href="/student-home">Dashboard</a>
+      <a class="nav-item nav-link" id="profile" href="/student-profile">Profile</a>
+      <a class="nav-item nav-link" id="notification-settings" href="/student-notification-settings">Notification Settings</a>
+      <a class="nav-item nav-link" id="trip-history" href="/student-trip-history">Trip History</a>
+      <a class="nav-item nav-link" id="" href="/logout">Logout</a>      
     </div>
   </div>
     </nav>
@@ -56,9 +56,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbar">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" id="home" href="/conductor-home">Home</a>
+      <a class="nav-item nav-link" id="home" href="/conductor-home">Dashboard</a>
       <a class="nav-item nav-link" id="home" href="/conductor-current-trip">Current Trip</a>
-      <a class="nav-item nav-link" id="home" href="/conductor-my-trips">My Trips</a>
+      <a class="nav-item nav-link" id="home" href="/conductor-trip-history">Trip History</a>
       <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
     </div>
   </div>
@@ -76,12 +76,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbar">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" id="home" href="/admin-home">Home</a>
-        <a class="nav-item nav-link" id="home" href="/admin-manage-routes">Manage Routes</a>
-        <a class="nav-item nav-link" id="home" href="/admin-manage-conductors">Manage Conductors </a>
-        <a class="nav-item nav-link" id="home" href="/admin-wallet-recharge">Wallet Recharge</a>
-        <a class="nav-item nav-link" id="home" href="/conductor-manage-trips">Financial Stats</a>
-        <a class="nav-item nav-link" id="home" href="/conductor-manage-trips">Dynamic Fleet management</a>
+        <a class="nav-item nav-link" id="home" href="/admin-home">Dashboard</a>
+        <a class="nav-item nav-link" id="home" href="/admin-user-management">User Management</a>
+        <a class="nav-item nav-link" id="home" href="/admin-trip-management">Trip Management</a>
+        <a class="nav-item nav-link" id="home" href="/admin-fleet-management">Fleet Management</a>
+        <a class="nav-item nav-link" id="home" href="/admin-financial-stats">Financial Stats</a>
+        <a class="nav-item nav-link" id="home" href="/admin-emulator">Emulator</a>
         <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
       </div>
     </div>
