--- a/website/templates/student_trip_history.html
+++ b/website/templates/student_trip_history.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
-{% block title %}Student Dashboard{% endblock %} 
+{% block title %}Student Trip History{% endblock %} 
 
 {% block content %}
 
