update gps , phase done

--- a/website/templates/admin_trip_management.html
+++ b/website/templates/admin_trip_management.html
@@ -121,7 +121,7 @@
             <th >
               <select class="form-select btn-danger" aria-label="Default select example" id = "route_id">
               {%for r in routes%}
-                <option value="{{r.id}}">{{r.route_id}}</option>
+                <option value="{{r.route_id}}">{{r.route_id}}</option>
               {%endfor%}
               </select> 
               
