--- a/website/templates/admin_emulator.html
+++ b/website/templates/admin_emulator.html
@@ -7,12 +7,87 @@
 <h1>No of Sample sent = <span id = "count">0</span></h1>
 
     <button  class = "btn btn-primary" onclick="refreshGPS()">GPS UPDATE</button>
-    <button  class = "btn btn-danger" onclick="setInterval(start,1000)">START</button>
+    <button  class = "btn btn-danger" onclick="setInterval(start,3000)">START</button>
 
-
+    
 </div>
 <br>
     
-<button  class = "btn btn-danger" onclick="check_rasberry()">RASBERYY PI</a>
+<button  class = "btn btn-danger" onclick="check_rasberry()">RASBERYY PI</button>
+
+
+    <div class="card " style="width:18rem">
+
+
+    <form method="POST">
+        <h1 align="center">RFID SIMULATOR</h3>
+            <div class="form-group">
+                <label for="bus_id">BUS ID  : </label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="bus_id"
+                  name="email"
+                  placeholder="Enter Bus NO"
+                />
+              </div>
+
+        <div class="form-group">
+          <label for="email">RFID NO  : </label>
+          <input
+            type="text"
+            class="form-control"
+            id="rfid"
+            name="email"
+            placeholder="Enter RFID NO"
+          />
+        </div>
+      
+      
+        
+        <br>
+        <button type="submit" class="btn btn-danger" onclick="checkRFID()">Submit</button>
+      </form>
+
+    </div>
+
+
+
+<br>
+    
+    <div class="card " style="width:18rem">
+
+
+      <form method="POST">
+          <h1 align="center">GPS CHECK</h3>
+              <div class="form-group">
+                  <label for="lat">LAT  : </label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="lat"
+                    name="email"
+                    placeholder="Enter LAT"
+                  />
+                </div>
+  
+          <div class="form-group">
+            <label for="text">LONG  : </label>
+            <input
+              type="text"
+              class="form-control"
+              id="long"
+              name="email"
+              placeholder="Enter Long"
+            />
+          </div>
+        
+        
+          
+          <br>
+          <button type="submit" class="btn btn-danger" onclick="check_gps()">Submit</button>
+        </form>
+  
+      </div>
 {% endblock %}
 
