--- a/website/templates/student_profile.html
+++ b/website/templates/student_profile.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <!-- DETAILS-->
+
 <div>
   <table class="table table-striped">
     <thead>
@@ -18,7 +19,7 @@
       </tr>
       <tr>
         <th scope="row">RFID Number</th>
-        <td>{{user.account_number}}</td>
+        <td>{{user.rfid_number}}</td>
       </tr>
       <tr>
         <th scope="row">Phone Number</th>
@@ -40,7 +41,7 @@
     </tbody>
   </table>
   <a class="btn  btn-warning " href="/conductor-utility-repair-alert/ " role="button"  >RESET PASSWORD</a><br>
-  </div>
+</div>
 
 
 
