--- a/website/templates/admin_emulator.html
+++ b/website/templates/admin_emulator.html
@@ -16,7 +16,7 @@
 <button  class = "btn btn-danger" onclick="check_rasberry()">RASBERYY PI</button>
 
 
-    <div class="card " style="width:18rem">
+    <div class="card" style="width:18rem">
 
 
     <form method="POST">
@@ -55,7 +55,7 @@
 
 <br>
     
-    <div class="card " style="width:18rem">
+    <div class="card "  style="width: 25rem;background: rgb(236, 163, 219);margin-left: 5px;margin-right: 5px; padding-left: 5px;padding-right: 5px;padding-bottom : 10px; display: inline-block;">
 
 
       <form method="POST">
