--- a/website/templates/admin_trip_management.html
+++ b/website/templates/admin_trip_management.html
@@ -40,7 +40,7 @@
   </div>
 
 <!--Week Book form-->
-  <div class ="card" style="width: 25rem;background: rgb(146, 170, 243);margin-left: 5px;padding-left: 5px;padding-right: 5px;; display: inline-block;" >
+  <div class ="card" style="width: 25rem;background: rgb(146, 170, 243);margin-left: 5px;margin-right: 5px;padding-left: 5px;padding-right:5px ; padding-bottom : 10px; display: inline-block;" >
   <form method="POST">
     <h1 align="center">Week Book</h3>
       
@@ -91,7 +91,7 @@
 
   
 <!--CREATE TRIP FORMs-->
-<div class ="card" style="width: 30rem;background: rgb(236, 163, 219);margin-left: 20px;padding-left: 5px;display: inline-block;" >
+<div class ="card" style="width: 25rem;background: rgb(236, 163, 219);margin-left: 5px;margin-right: 5px; padding-left: 5px;padding-right: 5px;padding-bottom : 10px; display: inline-block;" >
   <form method="POST">
     <h1 align="center">Trip Book</h3>
       
@@ -120,9 +120,17 @@
 
             <th >
               <select class="form-select btn-danger" aria-label="Default select example" id = "route_id">
-              {%for r in routes%}
+              <!--
+                {%for r in routes%}
                 <option value="{{r.route_id}}">{{r.route_id}}</option>
-              {%endfor%}
+                {%endfor%}
+              -->
+              <option value="A">A</option>
+              <option value="B">B</option>
+              <option value="C">C</option>
+              <option value="D">D</option>
+              <option value="X">X</option>
+              <option value="Y">Y</option>
               </select> 
               
             </th>
